MEC Dev Sandbox/MEC Dev Sandbox/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Order Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepts_Partial_Order__c</fullName>
        <formula>Account.Accepts_Partial_Order__c</formula>
        <label>Accepts Partial Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Should be Approved before the RFPO/PO can be generated</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_PO_Number__c</fullName>
        <inlineHelpText>Kindly enter here the Client PO Number once received.</inlineHelpText>
        <label>Client PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Product_Category__c</fullName>
        <formula>IF(INCLUDES( Contact__r.Products_Category__c , &quot;TV&quot;), &quot;TV&quot;, &apos;&apos;)  + &apos; &apos; + 
IF(INCLUDES( Contact__r.Products_Category__c , &quot;HV&quot;), &quot;HV&quot;, &apos;&apos;)  + &apos; &apos; + 
IF(INCLUDES( Contact__r.Products_Category__c , &quot;Hi-Fi&quot;), &quot;Hi-Fi&quot;, &apos;&apos;)  + &apos; &apos; + 
IF(INCLUDES( Contact__r.Products_Category__c , &quot;PIC&quot;), &quot;PIC&quot;, &apos;&apos;)  + &apos; &apos; + 
IF(INCLUDES( Contact__r.Products_Category__c , &quot;PVC&quot;), &quot;PVC&quot;, &apos;&apos;)  + &apos; &apos; + 
IF(INCLUDES( Contact__r.Products_Category__c , &quot;PA&quot;), &quot;PA&quot;, &apos;&apos;)  + &apos; &apos; + 
IF(INCLUDES( Contact__r.Products_Category__c , &quot;ME&quot;), &quot;ME&quot;, &apos;&apos;)  + &apos; &apos; +  
IF(INCLUDES( Contact__r.Products_Category__c , &quot;BNP&quot;), &quot;BNP&quot;, &apos;&apos;)  + &apos; &apos; + 
IF(INCLUDES( Contact__r.Products_Category__c , &quot;RME&quot;), &quot;RME&quot;, &apos;&apos;)  + &apos; &apos; +  
IF(INCLUDES( Contact__r.Products_Category__c , &quot;SEC&quot;), &quot;SEC&quot;, &apos;&apos;)  + &apos; &apos; +  
IF(INCLUDES( Contact__r.Products_Category__c , &quot;MOB&quot;), &quot;MOB&quot;, &apos;&apos;)  + &apos; &apos; +  
IF(INCLUDES( Contact__r.Products_Category__c , &quot;PSX&quot;), &quot;PSX&quot;, &apos;&apos;)  + &apos; &apos; +  
IF(INCLUDES( Contact__r.Products_Category__c , &quot;CH&quot;), &quot;CH&quot;, &apos;&apos;)  + &apos; &apos; +  
IF(INCLUDES( Contact__r.Products_Category__c , &quot;BENQ&quot;), &quot;BENQ&quot;, &apos;&apos;)  + &apos; &apos; + 
IF(INCLUDES( Contact__r.Products_Category__c , &quot;WG&quot;), &quot;WG&quot;, &apos;&apos;)  + &apos; &apos; + 
IF(INCLUDES( Contact__r.Products_Category__c , &quot;Eloc&quot;), &quot;Eloc&quot;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact:  send RFPO to this contact</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>RFPO Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>RFPO-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>RFPO Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PO_Validity__c</fullName>
        <inlineHelpText>Kindly enter here the Client PO Validity as per their PO</inlineHelpText>
        <label>PO Validity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <formula>Account.ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Overdue Payments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit limit Exceeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit status is blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <formula>TEXT(Contact__r.Salutation)</formula>
        <inlineHelpText>used for the email templates</inlineHelpText>
        <label>Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <formula>IF(AND(RecordType.Name==&apos;RFPO&apos;,ISPICKVAL(Approval_Status__c, &apos;Not Approved&apos;)),&apos;RFPO&apos;, 
IF(AND(RecordType.Name==&apos;RFPO&apos;,ISPICKVAL(Approval_Status__c, &apos;Submitted&apos;)), &apos;RFPO Submitted&apos;, 
IF(AND(RecordType.Name==&apos;PO&apos;,ISPICKVAL(Approval_Status__c,&apos;Not Approved&apos;)),&apos;PO&apos;,
IF(AND(RecordType.Name==&apos;PO&apos;,ISPICKVAL(Approval_Status__c,&apos;Submitted&apos;)),&apos;PO Submitted&apos;,
IF(AND(RecordType.Name==&apos;PO&apos;,ISPICKVAL(Approval_Status__c, &apos;PO Approved&apos;)), &apos;PO-Filled&apos;,&apos;Rejected&apos;)))))</formula>
        <label>RFPO/PO Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <formula>MOD(FLOOR( ( TODAY()  -DATEVALUE(&quot;2006-01-01&quot; ))/7),52)+1</formula>
        <label>Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All RFPO/PO</label>
    </listViews>
    <listViews>
        <fullName>All_PO</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Stage__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.PO</value>
        </filters>
        <label>All PO</label>
    </listViews>
    <listViews>
        <fullName>All_RFPO</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.TYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Stage__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.RFPO</value>
        </filters>
        <label>All RFPO</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>PO</fullName>
        <active>true</active>
        <businessProcess>Order Management</businessProcess>
        <label>PO</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFPO</fullName>
        <active>true</active>
        <businessProcess>Order Management</businessProcess>
        <label>RFPO</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>